# commit-cat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  test.md
.github/workflows/: release.yml
crates/commit-cat-core/: Cargo.toml
crates/commit-cat-core/src/: items.rs  lib.rs  platform.rs  state_machine.rs  xp.rs
crates/commit-cat-core/src/models/: activity.rs  ai_provider_catalog.rs  cat.rs  cat_profile.rs  growth.rs  mod.rs  settings.rs
crates/commit-cat-core/tests/: cat_profile_test.rs  items_test.rs  state_machine_test.rs  xp_test.rs
jetbrains-plugin/: build.gradle.kts  settings.gradle.kts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: activity.rs  ai.rs  cat.rs  fullscreen.rs  git.rs  github.rs  growth.rs  mod.rs  pomodoro.rs  settings.rs  update.rs  xp.rs
src-tauri/src/events/: mod.rs
src-tauri/src/models/: activity.rs  ai_provider_catalog.rs  mod.rs  settings.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: activity.rs  docker.rs  git.rs  github.rs  mod.rs  plugin_server.rs  state_machine.rs  storage.rs  update.rs
src-tauri/src/utils/: mod.rs
src/components/cat/: Cat.css  Cat.tsx  SubCat.tsx  personality.ts
src/components/settings/: Settings.css  Settings.tsx
src/components/summary/: Summary.css  Summary.tsx
src/components/tray/: TrayPanel.tsx
src/stores/: catStore.ts
src/styles/: global.css
src/types/: cat.ts
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
(+8 files in other folders)
