[package]
name = "commit-cat"
version = "0.3.1"
description = "A developer desktop pet that grows with your coding activity"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "commit_cat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api",
    "tray-icon",
    "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"           # File system watcher (for git HEAD changes)
directories = "5"      # Cross-platform app data paths
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
libgit2-sys = { version = "0.18", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
toml = "0.8"
commit-cat-core = { path = "../crates/commit-cat-core" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
