[package]
name = "commit-cat-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for CommitCat - platform-independent models, XP, state machine"
license = "MIT"

[features]
default = []
native = ["directories"]
server = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# native only
directories = { version = "5", optional = true }
